--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+DestinationBangkok/ProjectSettings/Packages/com.unity.probuilder/Settings.json
